2002-09-25  akira yamada  <akira@arika.org>

	* termios.c
	(termios_clone): new method "clone" for Termios::Termios.
	(Init_termios): revived Termios.new_termios for backward
	compatibility.

	* version 0.9.1.
	
2002-09-25  akira yamada  <akira@arika.org>

	* Termios module can be included to IO classes and can extend IO
	objects.
	
	* now Termios::Termios is rb_cObject class.

	* version 0.9.0.
	
Wed Nov 15 19:03:06 2000  akira yamada  <akira@arika.org>

	* renamed to ruby-termios.

Wed Dec  1 21:27:23 1999  GOTO Kentaro <gotoken@math.sci.hokudai.ac.jp>

	* termios.c: removed c_line.
	* test1.rb: removed c_line.
	* test3.rb: stty -echo.

Fri Feb 19 00:05:20 1999  akira yamada  <akira@linux.or.jp>

	* termios.c (Init_termios): now sTermios is hidden.
	* test2.rb: rewrited.

Fri Thu 18 02:24:21 1999  akira yamada  <akira@linux.or.jp>

	* development started.