@@ -1,3 +1,9 @@
+2002-10-10  akira yamada  <akira@arika.org>
+
+	* termios.c
+	(Init_termios): revived Termios::Termios#c_foo/c_foo= for backward
+	compatibility.
+
 2002-09-25  akira yamada  <akira@arika.org>
 
 	* termios.c
@@ -6,7 +12,7 @@
 	compatibility.
 
 	* version 0.9.1.
-	
+
 2002-09-25  akira yamada  <akira@arika.org>
 
 	* Termios module can be included to IO classes and can extend IO
@@ -15,7 +21,7 @@
 	* now Termios::Termios is rb_cObject class.
 
 	* version 0.9.0.
-	
+
 Wed Nov 15 19:03:06 2000  akira yamada  <akira@arika.org>
 
 	* renamed to ruby-termios.
